[gd_scene load_steps=17 format=3 uid="uid://364a6hbimsdo"]

[ext_resource type="Script" path="res://main.gd" id="1_onxos"]
[ext_resource type="Texture2D" uid="uid://clwjfq64mysvq" path="res://assets/map/termina.png" id="2_11rk7"]
[ext_resource type="FontFile" uid="uid://c8pp3wlu1cwov" path="res://assets/DrgnHunter.otf" id="3_n3rwh"]
[ext_resource type="Texture2D" uid="uid://d21cror81k2hu" path="res://assets/map/Clocktown.png" id="3_rhx48"]
[ext_resource type="Texture2D" uid="uid://ckn816ikfyo57" path="res://assets/map/Great_bay.png" id="4_2p5y1"]
[ext_resource type="BitMap" uid="uid://bl0bfosucp1au" path="res://assets/map/Clocktown_mask.png" id="4_o0jsc"]
[ext_resource type="Texture2D" uid="uid://d284s4m6qlxel" path="res://assets/map/Ikana_valley.png" id="5_hhbae"]
[ext_resource type="Texture2D" uid="uid://dxnxwcojghdtd" path="res://assets/map/Milk_road.png" id="6_1y5ta"]
[ext_resource type="BitMap" uid="uid://b0kh5vbky47ej" path="res://assets/map/Great_bay_mask.png" id="6_srjb2"]
[ext_resource type="Texture2D" uid="uid://cxgat6qvtdfxi" path="res://assets/map/Snowhead.png" id="7_hlav0"]
[ext_resource type="BitMap" uid="uid://drpphaoi3rnn" path="res://assets/map/Ikana_valley_mask.png" id="8_vsv34"]
[ext_resource type="BitMap" uid="uid://srvm1yipk6bb" path="res://assets/map/Milk_road_mask.png" id="10_vqu0b"]
[ext_resource type="BitMap" uid="uid://brh4qq2hnvti7" path="res://assets/map/Snowhead_mask.png" id="12_qqxdq"]
[ext_resource type="Texture2D" uid="uid://bwsq4vxqwbp25" path="res://assets/map/Southern_swamp.png" id="13_o6vcb"]
[ext_resource type="BitMap" uid="uid://br6ujnc0ss0l6" path="res://assets/map/Southern_swamp_mask.png" id="14_63gxn"]

[sub_resource type="FontVariation" id="FontVariation_dafns"]
base_font = ExtResource("3_n3rwh")
variation_transform = Transform2D(1, 0.3, 0, 1, 0, 0)

[node name="Overlay" type="Control"]
modulate = Color(1, 1, 0.784314, 0.784314)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_onxos")

[node name="BgColor" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_bottom = 0.018
offset_right = 800.0
offset_bottom = 589.2
color = Color(0.392157, 0.294118, 0.490196, 1)

[node name="TextureRect" type="TextureRect" parent="BgColor"]
layout_mode = 0
offset_right = 400.0
offset_bottom = 284.0
texture = ExtResource("2_11rk7")

[node name="Clocktown" type="TextureButton" parent="BgColor/TextureRect"]
layout_mode = 0
offset_right = 400.0
offset_bottom = 284.0
texture_hover = ExtResource("3_rhx48")
texture_click_mask = ExtResource("4_o0jsc")

[node name="Great_bay" type="TextureButton" parent="BgColor/TextureRect"]
layout_mode = 0
offset_right = 400.0
offset_bottom = 284.0
texture_hover = ExtResource("4_2p5y1")
texture_click_mask = ExtResource("6_srjb2")

[node name="Ikana_valley" type="TextureButton" parent="BgColor/TextureRect"]
layout_mode = 0
offset_right = 400.0
offset_bottom = 284.0
texture_hover = ExtResource("5_hhbae")
texture_click_mask = ExtResource("8_vsv34")

[node name="Milk_road" type="TextureButton" parent="BgColor/TextureRect"]
layout_mode = 0
offset_right = 400.0
offset_bottom = 284.0
texture_hover = ExtResource("6_1y5ta")
texture_click_mask = ExtResource("10_vqu0b")

[node name="Snowhead" type="TextureButton" parent="BgColor/TextureRect"]
layout_mode = 0
offset_right = 400.0
offset_bottom = 284.0
texture_hover = ExtResource("7_hlav0")
texture_click_mask = ExtResource("12_qqxdq")

[node name="Southern_swamp" type="TextureButton" parent="BgColor/TextureRect"]
layout_mode = 0
offset_right = 400.0
offset_bottom = 284.0
texture_hover = ExtResource("13_o6vcb")
texture_click_mask = ExtResource("14_63gxn")

[node name="Label" type="Label" parent="BgColor"]
layout_mode = 0
offset_left = 534.0
offset_top = 21.0
offset_right = 670.0
offset_bottom = 81.0
theme_override_colors/font_color = Color(0.509804, 0.941176, 1, 1)
theme_override_fonts/font = ExtResource("3_n3rwh")
theme_override_font_sizes/font_size = 40
text = "0 / 393"

[node name="RichTextLabel" type="RichTextLabel" parent="BgColor"]
custom_minimum_size = Vector2(100, 400)
layout_mode = 2
offset_left = 420.0
offset_top = 90.0
offset_right = 800.0
offset_bottom = 600.0
theme_override_fonts/normal_font = ExtResource("3_n3rwh")
theme_override_fonts/italics_font = SubResource("FontVariation_dafns")
theme_override_font_sizes/normal_font_size = 12
theme_override_font_sizes/bold_font_size = 14
theme_override_font_sizes/italics_font_size = 9
theme_override_font_sizes/bold_italics_font_size = 14
theme_override_font_sizes/mono_font_size = 14
bbcode_enabled = true
text = "- Hereee
- [i]Risky zone to explore in the end[/i]
- Another location
- Great Bay Water Control Room Underwater Bubble


































SCROLL ME!!!"

[connection signal="pressed" from="BgColor/TextureRect/Clocktown" to="." method="_on_clocktown_pressed"]
[connection signal="pressed" from="BgColor/TextureRect/Great_bay" to="." method="_on_great_bay_pressed"]
[connection signal="pressed" from="BgColor/TextureRect/Ikana_valley" to="." method="_on_ikana_valley_pressed"]
[connection signal="pressed" from="BgColor/TextureRect/Milk_road" to="." method="_on_milk_road_pressed"]
[connection signal="pressed" from="BgColor/TextureRect/Snowhead" to="." method="_on_snowhead_pressed"]
[connection signal="pressed" from="BgColor/TextureRect/Southern_swamp" to="." method="_on_southern_swamp_pressed"]
